--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -5,7 +5,7 @@
   <vendor email="" url="https://github.com/Zymlex">Zymlex</vendor>
 
   <description><![CDATA[
-      Incomplete copy Raider ReSharper Dark theme.
+      Incomplete copy Rider ReSharper Dark theme.
     ]]></description>
 
   <change-notes><![CDATA[
